--- a/_sass/_pages.scss
+++ b/_sass/_pages.scss
@@ -42,7 +42,7 @@
 /* browse */
 
 /* map */
-#map { height: 750px; z-index: 98; }
+#map { height: 750px; z-index: 18; }
 .map-thumb {
     height: 100px;
     max-width: 100%;
